--- a/lab-02-plastic-waste.Rmd
+++ b/lab-02-plastic-waste.Rmd
@@ -6,6 +6,9 @@ output:
     highlight: pygments
     css: ../lab.css
 link-citations: true
+editor_options: 
+  markdown: 
+    wrap: sentence
 ---
 
 ```{r include = FALSE}
@@ -105,6 +108,7 @@ You might consider doing some research on Trinidad and Tobago to see why plastic
 
 1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
 
+
 ```{marginfigure}
 **NOTE:** From this point onwards the plots and the output of the code are not displayed in the lab instructions, but you can and should the code and view the results yourself.
 ```
@@ -152,7 +156,17 @@ This still doesn't look great...
 
 1.  Recreate the density plots above using a different (lower) alpha level that works better for displaying the density curves for all continents.
 
-2.  Describe why we defined the `color` and `fill` of the curves by mapping aesthetics of the plot but we defined the `alpha` level as a characteristic of the plotting geom.
+2.  Describe why we defined the `color` and `fill` of the curves by mapping aesthetics of the plot but we defined the `alpha` level as a characteristic of the plotting geom. 
+
+We define color and fill separately because aes needs to be with the variable
+
+```{r }
+ggplot(data = plastic_waste, 
+       aes(x = plastic_waste_per_cap, 
+                     color = continent, 
+                     fill = continent)) +
+  geom_density(alpha = 0.1)
+```
 
 🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
@@ -162,10 +176,12 @@ And yet another way to visualize this relationship is using side-by-side box plo
 ggplot(data = plastic_waste, 
        mapping = aes(x = continent, 
                      y = plastic_waste_per_cap)) +
-  geom_boxplot()
+  geom_violin()
 ```
 
 1.  Convert your side-by-side box plots from the previous task to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
+
+The violin plot now shows density
 
 ```{marginfigure}
 **Remember:** We use `geom_point()` to make scatterplots.
@@ -180,7 +196,13 @@ ggplot(data = plastic_waste,
 3.  Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population.
     You will need to make two separate plots.
     Do either of these pairs of variables appear to be more strongly linearly associated?
-
+```{r Points}
+ggplot(data = plastic_waste, 
+       mapping = aes(x = mismanaged_plastic_waste_per_cap, 
+                     y = plastic_waste_per_cap, 
+                     color = continent)) + 
+  geom_point()
+```
 🧶 ✅ ⬆️ *Now is another good time to knit your document and commit and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 # Wrapping up
@@ -213,6 +235,24 @@ plastic_waste %>%
     theme_minimal()
 ```
 
+```{r Recreate}
+  plastic_waste %>% 
+  mutate(coastal_pop_prop = coastal_pop / total_pop) %>%
+  filter(plastic_waste_per_cap < 3) %>%
+  ggplot(aes(x = total_pop,
+             y = plastic_waste_per_cap,
+             color = continent)) + 
+    geom_point() +
+    geom_smooth(color = "Black") +
+    scale_color_viridis_d() +
+    labs(x = "Total population", 
+         y = "Plastic waste per capita ", 
+         color = "Continent",
+         title = "Plastic waste vs. Total population",
+         subtitle = "by continent") +
+    theme_minimal()
+```
+
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
 
-Once you're done, submit a PDF copy of the lab to moodle. 
+Once you're done, submit a PDF copy of the lab to moodle.
